--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
 
     <script>
         // Configuration - Replace with your actual backend URL
-        const API_BASE_URL = 'https://lcms-backend.onrender.com'; // Replace with your Render deployment URL
+        const API_BASE_URL = 'https://lcms-backend.onrender.com'; // Replace with your actual backend URL/ Replace with your Render deployment URL
         
         // Global state
         let currentUser = null;
